<resources>
    <string name="app_name">Historica</string>
    <string name="ture_title">True</string>
    <string name="false_title">False</string>
    <string name="pre_text">previous button</string>
    <string name="next_text">next button</string>
    <string name="cunter_question">0 out of 100</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
</resources>
